@@ -18,6 +18,8 @@ debbugs (2.4.2~exp2) UNRELEASED; urgency=low
     (closes: #670456). Thanks to Jonathan Nieder and Bernhard Schmidt.
   * Add libravatar support.
   * Fix double encoding of attachments (closes: #703300)
+  * uri_escape e-mails in libravatar (closes: #728034). Thanks to Fabien
+    Givors for pointing this out and providing a patch.
 
   [Thanks to Arnout Engelen: ]
   * Add Homepage (closes: #670555).
